Avoid overflow from main

--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h3, h4, h5 {
-    margin: 32px -40px 16px 40px;
+    margin: 32px 0px 16px 40px;
     padding: 0px;
 }
 
